# analysis-utilities

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
notebooks/: HarvardSentences.ipynb  ICASSP2024.ipynb  Interspeech2024.ipynb  LJ_valid_plot.ipynb  Script_Demo.ipynb  temp_NS.txt  temp_NS_Vocoded.txt
whisperweranalysis/: checkpoint_deleter.py  checkpoint_mover.py  groundtruth.py  mel_utilities.py  mos_predictor.py  resampler.py  structure.py  text_generator.py  transcriber.py  utilities.py  wer.py
whisperweranalysis/LJ_Valid_transcription/GT/: 100.txt  13.txt  23.txt  40.txt  56.txt  62.txt  69.txt  81.txt  92.txt  99.txt
whisperweranalysis/plotting/: line.py  scatter.py
whisperweranalysis/speed_comparison/: FS2.json  GCFM-4.json  GRAD-10.json  GRAD_1.json  GRAD_10.json  GRAD_4.json  GRAD_50.json  MAT-1.json  MAT-10.json  MAT-2.json  MATCHA_1.json  MATCHA_10.json  MATCHA_2.json  MATCHA_3.json  MATCHA_4.json  MATCHA_50.json  VITS.json
whisperweranalysis/transcription/FastPitch/: FastPitch_102.txt  FastPitch_103.txt  FastPitch_106.txt  FastPitch_109.txt  FastPitch_110.txt  FastPitch_111.txt  FastPitch_117.txt  FastPitch_120.txt  FastPitch_122.txt  FastPitch_124.txt  FastPitch_139.txt  FastPitch_140.txt  FastPitch_142.txt  FastPitch_145.txt  FastPitch_146.txt  FastPitch_147.txt  FastPitch_151.txt  FastPitch_160.txt  FastPitch_185.txt  FastPitch_187.txt  FastPitch_193.txt  FastPitch_195.txt  FastPitch_196.txt  FastPitch_200.txt  FastPitch_203.txt  FastPitch_215.txt  FastPitch_217.txt  FastPitch_220.txt  FastPitch_226.txt  FastPitch_23.txt  FastPitch_234.txt  FastPitch_239.txt  FastPitch_24.txt  FastPitch_245.txt  FastPitch_250.txt  FastPitch_251.txt  FastPitch_258.txt  FastPitch_261.txt  FastPitch_262.txt  FastPitch_272.txt  (+126 more)
whisperweranalysis/transcription/Glow/: Glow_1.txt  Glow_101.txt  Glow_102.txt  Glow_103.txt  Glow_109.txt  Glow_114.txt  Glow_115.txt  Glow_117.txt  (+194 more)
(+14517 files in other folders)
