[tool.poetry]
name = "whisperweranalysis"
version = "0.1.0"
description = ""
authors = ["Shivam Mehta <shivam.mehta007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
torch = { url = "https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp38-cp38-linux_x86_64.whl"}
torchaudio = { url = "https://download.pytorch.org/whl/cu116/torchaudio-0.12.1%2Bcu116-cp38-cp38-linux_x86_64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu116/torchvision-0.13.1%2Bcu116-cp38-cp38-linux_x86_64.whl"}
whisper = {git = "https://github.com/openai/whisper.git"}
tqdm = "^4.64.1"
setuptools-rust = "^1.5.2"
transformers = "^4.23.1"
jiwer = "^2.5.1"
ffmpeg-python = "^0.2.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
