[tool.poetry]
name = "whisperweranalysis"
version = "0.1.0"
description = ""
authors = ["Shivam Mehta <shivam.mehta007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
whisper = {git = "https://github.com/openai/whisper.git"}
tqdm = "^4.64.1"
setuptools-rust = "^1.5.2"
transformers = "^4.23.1"
jiwer = "^2.5.1"
ffmpeg-python = "^0.2.0"
seaborn = "^0.12.0"
soundfile = "^0.11.0"
scipy = "^1.9.2"
librosa = "^0.9.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
whispertranscriber = 'whisperweranalysis.transcriber:main'
resampler = 'whisperweranalysis.resampler:main'
collatetranscription = 'whisperweranalysis.utilities:collate_transcription'
audio2mel = 'whisperweranalysis.mel_utilities:convert_to_mels_script'